# personnal_cookie_cutter

./: README.rst  cookiecutter.json
{{cookiecutter.directory_name}}/: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
{{cookiecutter.directory_name}}/{{cookiecutter.directory_name}}/: __init__.py
